--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5,3 +5,29 @@
 .box{
   height: 100%;
 }
+
+.Page404 {
+  display: flex;
+  width: 100%;
+  height: 75vh;
+  background-repeat: no-repeat;
+  background-image: url(https://365psd.com/images/previews/05e/404-error-page-free-psd-template-image-2815404_o.jpg)
+}
+
+.loader {
+  position: absolute;
+  top: 18em;
+  left: calc(50% - 3em);
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 10px solid #000000; 
+  border-bottom: 10px solid #000000;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
