--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,8 +1,21 @@
-#clickable{
+#clickable {
   cursor: pointer;
 }
 
-.box{
+#fadeIn {
+  animation: fadeIn 1s ease
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.box {
   height: 100%;
 }
 
@@ -11,7 +24,7 @@
   width: 100%;
   height: 75vh;
   background-repeat: no-repeat;
-  background-image: url(https://365psd.com/images/previews/05e/404-error-page-free-psd-template-image-2815404_o.jpg)
+  background-image: url(https://365psd.com/images/previews/05e/404-error-page-free-psd-template-image-2815404_o.jpg);
 }
 
 .loader {
@@ -19,7 +32,7 @@
   top: 18em;
   left: calc(50% - 3em);
   border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 10px solid #000000; 
+  border-top: 10px solid #000000;
   border-bottom: 10px solid #000000;
   border-radius: 50%;
   width: 100px;
@@ -28,6 +41,10 @@
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
