--- a/src/components/App.css
+++ b/src/components/App.css
@@ -6,6 +6,13 @@
   animation: fadeIn 1s ease
 }
 
+#brand{
+  color: rgb(177, 175, 175);
+}
+#brand:hover{
+color: rgba(255, 255, 255, 0.918);
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -47,4 +54,61 @@
   100% {
     transform: rotate(360deg);
   }
+}
+
+#dropdownTopic
+{
+    color: rgb(12, 12, 12);
+    text-decoration: none;
+    font: 20px Raleway;
+    margin: 0px 10px;
+    padding: 10px 10px;
+    position: relative;
+    cursor: pointer;
+}
+
+#topic
+{
+    color: #FFF;
+    text-decoration: none;
+    font: 20px Raleway;
+    margin: 0px 10px;
+    padding: 10px 10px;
+    position: relative;
+    z-index: 2;
+    cursor: pointer;
+}
+
+.selected{
+  border-bottom: 1px solid rgb(255, 255, 255);
+}
+
+.topic:before, .topic:after
+{
+    position: absolute;
+    left: 0px;
+    width: 100%;
+    height: 1px;
+    background: #FFF;
+    content: "";
+    opacity: 0;
+    transition: all 0.3s;
+}
+
+.topic:before
+{
+    top: 0px;
+    transform: translateY(-10px);
+}
+
+.topic:after
+{
+    bottom: 0px;
+    transform: translateY(10px);
+}
+
+.topic:hover:before, .topic:hover:after
+{
+    opacity: 1;
+    transform: translateY(0px);
 }
